<resources>
    <string name="app_name">Pass the Aux</string>
    <string name="title_activity_create_join_session">Create Join Session</string>
    <string name="title_activity_join_session">Join Session</string>
    <string name="back_button">Back</string>
    <string name="youtubeInstructions"> Enter a YouTube URL </string>
    <string name="queueSong">Queue Song</string>
    <string name="title_activity_create_session">Create Session Activity</string>
    <string name="title_activity_now_playing">Now Playing Activity</string>
    <string name="now_playing_activity_queue"> Queue Song</string>
    <string name="pause">Pause</string>
    <string name="refresh">Refresh</string>
    <string name="session_info">Session Info</string>
    <string name="leave_session">Leave</string>
    <string name="username">Username</string>
    <string name="display_name">Display</string>
    <string name="password">Password</string>
    <string name="create">Create</string>
</resources>
