<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5c6b73"
    tools:context="passtheaux.operationunthinkable.CreateSessionActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_create_session" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="75dp">


        <EditText
            android:id="@+id/passwordField"
            android:layout_width="210dp"
            android:layout_height="58dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="264dp"
            android:hint="@string/password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/displayNameField"
            android:layout_width="209dp"
            android:layout_height="58dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="168dp"
            android:hint="@string/display_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/createButton"
            android:layout_width="175dp"
            android:layout_height="61dp"
            android:layout_marginStart="112dp"
            android:layout_marginTop="50dp"
            android:text="@string/create"
            android:background="#e0fbfc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordField" />

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="76dp"
            android:background="#e0fbfc"
            android:onClick="homeScreen"
            android:text="@string/back_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/usernameField"
            android:layout_width="211dp"
            android:layout_height="55dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="92dp"
            android:hint="@string/username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="241dp"
            android:layout_height="66dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/app_name"
            android:textColor="#ffffff"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@+id/usernameField"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

</android.support.design.widget.CoordinatorLayout>
